# charlcode

./: .gitignore  ATTENTION_MECHANISMS_COMPLETE.md  BENCHMARK_RESULTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEVELOPER_GUIDE.md  DISTRIBUTION_GUIDE.md  END_TO_END_VALIDATION.md  FASE_14_1_KNOWLEDGE_GRAPHS_COMPLETE.md  FASE_14_3_TYPE_INFERENCE_COMPLETE.md  FASE_14_4_FOL_SOLVER_COMPLETE.md  FASE_14_5_DIFFERENTIABLE_LOGIC_COMPLETE.md  FASE_14_COMPLETE_NEUROSYMBOLIC.md  FASE_14_NEURO_SYMBOLIC_COMPLETE.md  FASE_15_COMPLETE_META_LEARNING.md  FASE_16_COMPLETE_EFFICIENT_ARCHITECTURES.md  GITHUB_SETUP.md  INSTALL_WINDOWS.md  LICENSE  LIVE_DEMO_GUIDE.md  LLVM_BACKEND_PLAN.md  NEXT_STEPS.md  PHASE10_KERNEL_FUSION_COMPLETE.md  PHASE7_REPORT.md  PHASE7_STATUS.md  PHASE8_COMPLETION_REPORT.md  PHASE8_PLAN.md  PHASE8_STATUS.md  PHASE9_COMPLETION_REPORT.md  PROGRESS_SESSION_12.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  ROADMAP_NEUROSYMBOLIC.md  ROADMAP_UPDATED.md  (+35 more)
AGI-TEST-PROJECT/: AGI_INDEX.md  AGI_JOURNEY.md  AGI_STATS.md  MANIFEST.md  README.md  README_AGI.md  run_all_levels.sh  test_ABSTRACT_REASONER.ch  test_CAUSAL_REASONER.ch  test_COMPOSITIONAL_REASONER.ch  test_META_REASONER.ch  test_MINIMAL_REASONER.ch  test_PLANNING_REASONER.ch  test_SELF_REFLECTION_AGI.ch  test_TRANSFER_LEARNER.ch
AGI_PROJECT_III/: CURRENT_STATUS.md  IMPLEMENTATION_PHILOSOPHY.md  LEVEL_1.5_TRAINING.ch  LEVEL_1_90PLUS.ch  LEVEL_1_BATCH.ch  LEVEL_1_FINAL.ch  LEVEL_1_FINAL_ATTEMPT.ch  LEVEL_1_FINAL_PUSH.ch  LEVEL_1_MEDIUM.ch  LEVEL_1_MINIMAL.ch  LEVEL_1_ROUTER_MATH_EXPERT.ch  LEVEL_1_SIMPLE.ch  LEVEL_1_SUCCESS.ch  LEVEL_1_V2.ch  LEVEL_1_V3.ch  LEVEL_1_V4.ch  LEVEL_1_WORKING.ch  LEVEL_2_COMPLETE.ch  LEVEL_2_DESIGN.md  LEVEL_2_ROUTER.ch  LEVEL_3_COMPLETE.ch  LEVEL_3_DESIGN.md  LEVEL_4_COMPLETE.ch  LEVEL_4_DESIGN.md  LEVEL_5_COMPLETE.ch  LEVEL_5_DESIGN.md  LEVEL_6_COMPLETE.ch  LEVEL_6_DESIGN.md  LEVEL_6_PHASE1.ch  LEVEL_6_PHASE2.ch  LEVEL_7_BASELINE_DENSE.ch  LEVEL_7_DESIGN.md  LEVEL_7_EVAL_COMPARISON.ch  LEVEL_7_FINAL_REPORT.md  LEVEL_7_TEST_DATASET.ch  PROGRESS_NOTES.md  README.md  ROADMAP.md  TEST_CROSS_ENTROPY.ch  TEST_GRADIENTS.ch  (+5 more)
benches/: codegen_vs_interpreter.rs  gpu_vs_cpu_benchmark.rs  llvm_vs_interpreter.rs
benchmarks/: BENCHMARK_RESULTS.md  PROGRESS_SESSION_1.md
docs/: SPECIFICATION.md
examples/: README.md  arrays.charl  autograd.ch  function.charl  hello.ch  hello.charl  live_neural_training.rs  math.charl  mnist.ch  neural_network.ch  simple_live_demo.rs  tensor_autograd.ch  tensor_basic.ch  tensor_matmul.ch  tensors.ch  test_autograd.rs  test_interpreter.rs  test_lexer.rs  test_nn.rs  test_training.rs  training_backprop.ch  training_regression.ch  training_simple.ch  training_xor.ch
installer/: README.md  charl-setup.iss  create-windows-installer.ps1
src/: advanced_builtins.rs  gpu_tensor.rs  lib.rs  (+4 more)
(+87 files in other folders)
