[package]
name = "charl"
version = "0.1.0"
edition = "2021"
authors = ["Charl Team"]
description = "A revolutionary programming language for AI and Deep Learning"
license = "MIT"

# Main Charl executable
[[bin]]
name = "charl"
path = "src/main.rs"

# Benchmark: MNIST training comparison with PyTorch
[[bin]]
name = "charl_mnist_bench"
path = "benchmarks/pytorch_comparison/mnist/charl_mnist.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU Support (Phase 8) - DESBLOQUEADO EN LINUX ✅
wgpu = { version = "0.19", features = ["wgsl"] }  # WebGPU for cross-platform GPU compute
bytemuck = { version = "1.14", features = ["derive"] }  # Zero-copy casting for GPU buffers
pollster = "0.3"           # Async executor for wgpu setup
futures-intrusive = "0.5"  # Async primitives for wgpu

# LLVM Support (Phase 7) - REACTIVADO
# Nota: Si hay problemas de compilación con Polly, usar llvm-sys directamente
# o implementar un backend más simple sin JIT
inkwell = { version = "0.4", features = ["llvm15-0"], optional = true }
rand = "0.9.2"

[features]
default = []
llvm = ["inkwell"]  # Enable LLVM backend (optional)

[dev-dependencies]
criterion = "0.5"  # DESBLOQUEADO EN LINUX ✅

[[bench]]
name = "codegen_vs_interpreter"
path = "benches/codegen_vs_interpreter.rs"
harness = false

[[bench]]
name = "gpu_vs_cpu_benchmark"
path = "benches/gpu_vs_cpu_benchmark.rs"
harness = false

[[bench]]
name = "llvm_vs_interpreter"
path = "benches/llvm_vs_interpreter.rs"
harness = false
required-features = ["llvm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
